add download selected button

--- a/DocumentStoreConcepts/DocumentStoreConcepts.csproj
+++ b/DocumentStoreConcepts/DocumentStoreConcepts.csproj
@@ -88,6 +88,7 @@
     <Content Include="pdf_120px.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="zip-icon2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
