--- a/DocumentStoreConcepts/DocumentStoreConcepts.csproj
+++ b/DocumentStoreConcepts/DocumentStoreConcepts.csproj
@@ -33,8 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,7 +71,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="document.pdf" />
+    <None Include="document.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\DataSources\DocumentStoreConcepts.Models.Document.datasource" />
     <None Include="Properties\DataSources\DocumentStoreConcepts.Models.DocumentGroup.datasource" />
     <None Include="Properties\Settings.settings">
